--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(cpsl)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 find_package(FLEX)
+find_package(BISON)
 flex_target(scanner cpsl.lex ${CMAKE_CURRENT_BINARY_DIR}/scanner.cpp)
-set(SOURCES scanner)
+bison_target(parser cpsl.y ${CMAKE_CURRENT_BINARY_DIR}/parser.cpp)
+set(SOURCES parser scanner)
 add_executable(cpsl ${SOURCES})
