--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 find_package(FLEX)
 find_package(BISON)
 flex_target(scanner cpsl.lex ${CMAKE_CURRENT_BINARY_DIR}/scanner.cpp)
-bison_target(parser cpsl.y ${CMAKE_CURRENT_BINARY_DIR}/parser.cpp COMPILE_FLAGS "-d -W")
+bison_target(parser cpsl.y ${CMAKE_CURRENT_BINARY_DIR}/parser.cpp
+        COMPILE_FLAGS "-d -W -v --report-file=${CMAKE_CURRENT_BINARY_DIR}/bison.output")
 set(SOURCES parser scanner)
 add_executable(cpsl ${SOURCES})
 
@@ -26,7 +27,7 @@ foreach (language_test_dir ${language_tests})
         ${language_test_dir}
         "${CMAKE_CURRENT_BINARY_DIR}/test-files/${language_test}"
         DEPENDS "${CMAKE_SOURCE_DIR}/language-tests/test-files")
-endforeach(language_test_dir ${language_tests})
+endforeach()
 
 add_custom_target(language_test
         COMMAND ./language_test.sh)
