--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ set(COMMON_SOURCES
         src/Register.cpp
         src/Register.hpp
         src/StringLabel.cpp
-        src/StringLabel.hpp)
+        src/StringLabel.hpp src/Function.cpp src/Function.hpp)
 
 set(COMPILER_SOURCES
         parser
